--- a/xAwareness/xAwareness.csproj
+++ b/xAwareness/xAwareness.csproj
@@ -200,6 +200,9 @@
   <ItemGroup>
     <None Include="Resources\Irelia_Square_0.png" />
   </ItemGroup>
+   <ItemGroup>
+    <None Include="Resources\Ivern_Square_0.png" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Janna_Square_0.png" />
   </ItemGroup>
