--- a/Syndra Revamped/SyndraRevamped.csproj
+++ b/Syndra Revamped/SyndraRevamped.csproj
@@ -40,7 +40,7 @@
       <HintPath>C:\Users\docum\Documents\LESlmkaZ6DC\References\LeagueSharp.dll</HintPath>
     </Reference>
     <Reference Include="LeagueSharp.Common">
-      <HintPath>C:\Users\docum\Documents\LESlmkaZ6DC\References\LeagueSharp.Common.dll</HintPath>
+      <HintPath>..\..\LESlmkaZ6DC\References\LeagueSharp.Common.dll</HintPath>
     </Reference>
     <Reference Include="SebbyLib">
       <HintPath>C:\Users\docum\Documents\LESlmkaZ6DC\References\SebbyLib.dll</HintPath>
