New Anti Gapcloser and Interrupter

--- a/hi im gosu Reborn/hi im gosu Reborn.csproj
+++ b/hi im gosu Reborn/hi im gosu Reborn.csproj
@@ -53,6 +53,9 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="clipper_library">
+      <HintPath>C:\Users\docum\Documents\LESlmkaZ6DC\References\clipper_library.dll</HintPath>
+    </Reference>
     <Reference Include="LeagueSharp">
       <HintPath>C:\Users\docum\Documents\LESlmkaZ6DC\References\LeagueSharp.dll</HintPath>
     </Reference>
@@ -76,6 +79,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Distance.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
