--- a/hi im gosu Reborn/hi im gosu Reborn.csproj
+++ b/hi im gosu Reborn/hi im gosu Reborn.csproj
@@ -81,8 +81,12 @@
   <ItemGroup>
     <Compile Include="Condemn.cs" />
     <Compile Include="Distance.cs" />
+    <Compile Include="Geometry.cs" />
+    <Compile Include="MyCache.cs" />
+    <Compile Include="Parada.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QLogic.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
