--- a/hi im gosu Reborn/hi im gosu Reborn.csproj
+++ b/hi im gosu Reborn/hi im gosu Reborn.csproj
@@ -86,7 +86,7 @@
     <Compile Include="Parada.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QLogic.cs" />
+    <Compile Include="QMode.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
