--- a/hi im gosu Reborn/hi im gosu Reborn.csproj
+++ b/hi im gosu Reborn/hi im gosu Reborn.csproj
@@ -68,6 +68,9 @@
     <Reference Include="SharpDX">
       <HintPath>C:\Users\docum\Documents\LESlmkaZ6DC\References\SharpDX.dll</HintPath>
     </Reference>
+    <Reference Include="SharpDX.Direct3D9">
+      <HintPath>..\..\Documents\LESlmkaZ6DC\References\SharpDX.Direct3D9.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
